--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ function showVideos(){
         content =
           '<h2>'+(lang==='ar'?'المقاطع التعليمية':'Video Lessons')+'</h2>'+
           '<video controls width="100%" style="border-radius:8px;max-height:60vh;">'+
-          '<source src="videos/Test.mp4" type="video/mp4">'+
+          '<source src="Test.mp4" type="video/mp4">'+
           (lang==='ar'?'متصفحك لا يدعم تشغيل الفيديو.':'Your browser does not support video playback.')+
           '</video>'+
           '<button class="back-btn" onclick="showCourseOptions()">'+
